--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -329,7 +329,13 @@ body {
   color: white;
 }
 
-.dropdown:hover .dropdown__menu {
+.dropdown__menu {
+  display: none;
+}
+.dropdown.active > .dropdown__menu {
+  display: flex;
+}
+.dropdown__submenu.active {
   display: flex;
 }
 /* Nested DropDown */
@@ -964,7 +970,6 @@ textarea.input {
     padding: 0.45rem 1.2rem;
   }
 }
-
 
 .elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72 {
   max-width: 100% !important;
